@@ -99,6 +99,200 @@ PyObject *pysmdev_get_version(
 	         errors ) );
 }
 
+#if defined( LIBCSTRING_HAVE_WIDE_SYSTEM_CHARACTER )
+
+/* Checks if the filename refers to a device
+ * Returns a Python object if successful or NULL on error
+ */
+PyObject *pysmdev_check_device(
+           PyObject *self PYSMDEV_ATTRIBUTE_UNUSED,
+           PyObject *arguments,
+           PyObject *keywords )
+{
+	PyObject *exception_string    = NULL;
+	PyObject *exception_traceback = NULL;
+	PyObject *exception_type      = NULL;
+	PyObject *exception_value     = NULL;
+	PyObject *string_object       = NULL;
+	libcerror_error_t *error      = NULL;
+	static char *function         = "pysmdev_check_device";
+	static char *keyword_list[]   = { "filename", NULL };
+	const wchar_t *filename_wide  = NULL;
+	const char *filename_narrow   = NULL;
+	char *error_string            = NULL;
+	int result                    = 0;
+
+	PYSMDEV_UNREFERENCED_PARAMETER( self )
+
+	/* Note that PyArg_ParseTupleAndKeywords with "s" will force Unicode strings to be converted to narrow character string.
+	 * On Windows the narrow character strings contains an extended ASCII string with a codepage. Hence we get a conversion
+	 * exception. We cannot use "u" here either since that does not allow us to pass non Unicode string objects and
+	 * Python (at least 2.7) does not seems to automatically upcast them.
+	 */
+	if( PyArg_ParseTupleAndKeywords(
+	     arguments,
+	     keywords,
+	     "|O",
+	     keyword_list,
+	     &string_object ) == 0 )
+	{
+		return( NULL );
+	}
+	PyErr_Clear();
+
+	result = PyObject_IsInstance(
+	          string_object,
+	          (PyObject *) &PyUnicode_Type );
+
+	if( result == -1 )
+	{
+		PyErr_Fetch(
+		 &exception_type,
+		 &exception_value,
+		 &exception_traceback );
+
+		exception_string = PyObject_Repr(
+		                    exception_value );
+
+		error_string = PyString_AsString(
+		                exception_string );
+
+		if( error_string != NULL )
+		{
+        		PyErr_Format(
+		         PyExc_RuntimeError,
+			 "%s: unable to determine if string object is of type unicode with error: %s.",
+			 function,
+			 error_string );
+		}
+		else
+		{
+        		PyErr_Format(
+		         PyExc_RuntimeError,
+			 "%s: unable to determine if string object is of type unicode.",
+			 function );
+		}
+		Py_DecRef(
+		 exception_string );
+
+		return( NULL );
+	}
+	else if( result != 0 )
+	{
+		PyErr_Clear();
+
+		filename_wide = (wchar_t *) PyUnicode_AsUnicode(
+		                             string_object );
+		Py_BEGIN_ALLOW_THREADS
+
+		result = libsmdev_check_device_wide(
+		          filename_wide,
+		          &error );
+
+		Py_END_ALLOW_THREADS
+
+		if( result == -1 )
+		{
+			pysmdev_error_raise(
+			 error,
+			 PyExc_IOError,
+			 "%s: unable to check device.",
+			 function );
+
+			libcerror_error_free(
+			 &error );
+
+			return( NULL );
+		}
+		if( result != 0 )
+		{
+			return( Py_True );
+		}
+		return( Py_False );
+	}
+	PyErr_Clear();
+
+	result = PyObject_IsInstance(
+		  string_object,
+		  (PyObject *) &PyString_Type );
+
+	if( result == -1 )
+	{
+		PyErr_Fetch(
+		 &exception_type,
+		 &exception_value,
+		 &exception_traceback );
+
+		exception_string = PyObject_Repr(
+				    exception_value );
+
+		error_string = PyString_AsString(
+				exception_string );
+
+		if( error_string != NULL )
+		{
+        		PyErr_Format(
+		         PyExc_RuntimeError,
+			 "%s: unable to determine if string object is of type string with error: %s.",
+			 function,
+			 error_string );
+		}
+		else
+		{
+        		PyErr_Format(
+		         PyExc_RuntimeError,
+			 "%s: unable to determine if string object is of type string.",
+			 function );
+		}
+		Py_DecRef(
+		 exception_string );
+
+		return( NULL );
+	}
+	else if( result != 0 )
+	{
+		PyErr_Clear();
+
+		filename_narrow = PyString_AsString(
+				   string_object );
+
+		Py_BEGIN_ALLOW_THREADS
+
+		result = libsmdev_check_device(
+			  filename_narrow,
+			  &error );
+
+		Py_END_ALLOW_THREADS
+
+		if( result == -1 )
+		{
+			pysmdev_error_raise(
+			 error,
+			 PyExc_IOError,
+			 "%s: unable to check device.",
+			 function );
+
+			libcerror_error_free(
+			 &error );
+
+			return( NULL );
+		}
+		if( result != 0 )
+		{
+			return( Py_True );
+		}
+		return( Py_False );
+	}
+        PyErr_Format(
+         PyExc_TypeError,
+         "%s: unsupported string object type",
+         function );
+
+	return( NULL );
+}
+
+#else
+
 /* Checks if the filename refers to a device
  * Returns a Python object if successful or NULL on error
  */
@@ -110,21 +304,18 @@ PyObject *pysmdev_check_device(
 	libcerror_error_t *error    = NULL;
 	static char *function       = "pysmdev_check_device";
 	static char *keyword_list[] = { "filename", NULL };
+	const char *filename        = NULL;
 	int result                  = 0;
 
-#if defined( LIBCSTRING_HAVE_WIDE_SYSTEM_CHARACTER )
-	const wchar_t *filename     = NULL;
-	static char *format_string  = "|u";
-#else
-	const char *filename        = NULL;
-	static char *format_string  = "|s";
-#endif
 	PYSMDEV_UNREFERENCED_PARAMETER( self )
 
+	/* Note that PyArg_ParseTupleAndKeywords with "s" will force Unicode strings to be converted to narrow character string.
+	 * For systems that support UTF-8 this works for Unicode string objects as well.
+	 */
 	if( PyArg_ParseTupleAndKeywords(
 	     arguments,
 	     keywords,
-	     format_string,
+	     "|s",
 	     keyword_list,
 	     &filename ) == 0 )
 	{
@@ -132,15 +323,10 @@ PyObject *pysmdev_check_device(
 	}
 	Py_BEGIN_ALLOW_THREADS
 
-#if defined( LIBCSTRING_HAVE_WIDE_SYSTEM_CHARACTER )
-	result = libsmdev_check_device_wide(
-	          filename,
-	          &error );
-#else
 	result = libsmdev_check_device(
 	          filename,
 	          &error );
-#endif
+
 	Py_END_ALLOW_THREADS
 
 	if( result == -1 )
@@ -162,6 +348,8 @@ PyObject *pysmdev_check_device(
 	}
 	return( Py_False );
 }
+
+#endif /* defined( LIBCSTRING_HAVE_WIDE_SYSTEM_CHARACTER ) */
 
 /* Declarations for DLL import/export
  */
