@@ -37,6 +37,9 @@ Deployment
 Test:
 * add autoconf/make test suite
 
+20140529
+* improved dealing with paths in pysmdev on Windows
+
 20140527
 * fixes for dealing with Unicode paths in pysmdev
 * fixes for OSX python build
